tests/cmd_alias_bad.svx
; pos=fail warn=0 error=6
*fix 1 0 0 0
; This '-' is an actual station
1 - 1.00 090 0
; typo
*alias statoin - ..
; invalid 2nd parameter
*alias station _
; invalid 2nd parameter
*alias station = ..
; invalid 3rd parameter
*alias station - ...
1 - 1.01 091 1
; check error reporting in the presence of trailing comments
*alias station _; comment
*alias station - ...;comment
